src/nationalarchives/components/footer/footer.scss
@use "../../tools/colour";
@use "../../tools/typography";
@use "../../tools/media";
@use "../../utilities";
@use "../button";
@use "../grid";

.tna-footer {
  @include colour.invert;

  padding-top: 1rem;
  padding-bottom: 3rem;

  @include colour.on-high-contrast {
    @include colour.colour-border("keyline", 1px, solid, top);
  }

  .tna-logo {
    margin-top: 2rem;

    &__background {
      fill: transparent;
    }

    &__foreground {
      fill: currentColor;
    }
  }

  &__title {
    margin-top: 1rem;
    margin-bottom: 0;
    padding-top: 0;
  }

  &__address {
    font-style: normal;
  }

  &__meta {
    margin-top: 1rem;

    @include typography.relative-font-size(16);
  }

  &__social {
    margin-top: 2rem;

    &-items {
      display: flex;
      flex-wrap: wrap;
      gap: 1rem;
      align-items: flex-start;
    }

    &-item {
      &-link {
        min-width: calc(2rem + 4px);
        padding: 4px;

        display: block;

        text-align: center;
        line-height: 1;

        border: 0 transparent solid;
        border-width: 4px 0;

        .fa-solid,
        .fa-brands {
          font-size: 2rem;
        }

        &-text {
        }

        &:has(.fa-solid),
        &:has(.fa-brands) {
          &:hover {
            @include colour.colour-border("link", 4px, solid, bottom);
          }
        }
      }
    }
  }

  &__mailing-list {
    margin-top: 2rem;
    padding: 1rem;

    @include typography.relative-font-size(16);

    @include colour.colour-border("keyline-dark", 1px, dashed);

    // background: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23fff' stroke-width='2' stroke-dasharray='4%2c 8' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e") rgba(colour.brand-colour("white"), 0.1);
    // background-color: rgba(colour.brand-colour("white"), 0.1);
    background-color: rgba(#fff, 0.1);
  }

  &__navigation {
    &-block {
      padding-top: 2rem;

      &-heading {
      }

      &-items {
      }

      &-item {
        padding-top: 0.375rem;
        padding-bottom: 0.375rem;

        @include colour.colour-border("keyline", 1px, solid, bottom);

        &-link {
          display: inline-block;

          text-decoration: none;
          text-wrap: balance;

          &:hover {
            @include typography.interacted-text-decoration;
          }

          .fa-solid {
            margin-left: 0.75rem;
          }
        }
      }
    }
  }

  &__legal {
    padding-top: 3rem;

    @include typography.relative-font-size(16);

    &-items {
      margin-bottom: 0;

      text-align: center;

      @include media.on-tiny {
        text-align: inherit;
      }
    }

    &-item {
      padding: 0.5rem;

      display: inline-block;

      @include media.on-tiny {
        display: block;
      }

      &-link {
      }
    }
  }

  hr {
    margin-top: 1.5rem;
    margin-bottom: 1rem;
  }

  &__licence {
    @include typography.relative-font-size(16);

    &.tna-container {
      align-items: center;
    }

    .tna-column {
      margin-top: 0.5rem;
    }
  }

  &__licence-logo {
    display: block;
  }

  &__govuk {
    text-align: center;

    &-link {
      display: inline-block;
    }

    &-logotype-crown {
      margin: 0 auto;
      display: block;
    }
  }

  @include media.on-mobile {
    padding-top: 0;
    padding-bottom: 2rem;
  }

  @include colour.on-high-contrast {
    &__navigation {
      &-block {
        &-items {
          @include colour.colour-border("keyline-dark", 0.25rem, solid, top);
        }
      }
    }

    &__mailing-list {
      background-color: transparent;

      @include colour.colour-border("keyline-dark", 1px, solid);
    }
  }
}

